syntax = "proto3";

option csharp_namespace = "AbyssCLI.ABI";

message Vec2 {
	float x = 1;
	float y = 2;
}

message Vec3 {
	float x = 1;
	float y = 2;
	float z = 3;
}

message Vec4 {
	float w = 1;
	float x = 2;
	float y = 3;
	float z = 4;
}

message AnyVal {
	oneof val {
		bool bool = 1;
		int32 int = 2;
		double double = 3;
		string string = 4;
		Vec2 vec2 = 5;
		Vec3 vec3 = 6;
		Vec4 vec4 = 7;
	}
}